working on movie.id in thyemleaf